Pages(files) names refactored

--- a/aboutUs-fa.html
+++ b/aboutUs-fa.html
@@ -34,11 +34,12 @@
     </div>
     <div class="nav">
       <ul>
-        <li>خانه</li>
-        <li>گالری</li>
-        <li>بعضی</li>
-        <li>صادرات</li>
-        <li class="hover">درباره ما</li>
+        <li><a href="#">خانه</a></li>
+        <li><a href="#">گالری</a></li>
+        <li><a href="#">مجموعه</a></li>
+        <li><a href="#">خرید</a></li>
+        <li><a href="#">صادرات</a></li>
+        <li><a href="#">درباره ما</a></li>
       </ul>
     </div>
   </div>
