--- a/export-fa.html
+++ b/export-fa.html
@@ -34,11 +34,12 @@
   <div class="header">
     <div class="nav">
       <ul>
-        <li class="links">خانه</li>
-        <li class="links">گالری</li>
-        <li class="links">بعضی</li>
-        <li class="links">صادرات</li>
-        <li class="links">درباره ما</li>
+        <li class="links"><a href="#">خانه</a></li>
+        <li class="links"><a href="#">گالری</a></li>
+        <li class="links"><a href="#">مجموعه</a></li>
+        <li class="links"><a href="#">خرید</a></li>
+        <li class="links"><a href="#">صادرات</a></li>
+        <li class="links"><a href="#">درباره ما</a></li>
         <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
@@ -46,40 +47,42 @@
   <div class="export-title">
     <div class="left-side">
       <div class="wrapper">
-        <h1 class="title">تیتر صفحه صادرات</h1>
-        <p class="description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-          است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-          کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت
-          فراوان جامعه و متخصصان را می طلبد.</p>
+        <h1 class="title">فرایند صادرات</h1>
+        <p class="description">در قرن حاضر بسیار متمرکزتر از گذشته در حال توزیع ارزش و ارزش‌گذاری محصولات محلی برای
+          بازارهای جهانی است ، امروزه بسیاری از شرکت‌ها در سراسر جهان توانایی ورود به بازارهای جهانی را دارا می باشند با
+          این حال شرکت های محدودی رسالت خود را در تجارت آزاد جهانی ، انتقال ارزش ها و فرهنگ می دانند .
+          در این قسمت شرکت آرتکو در راستای ارائه جریان اطلاعاتی شفاف می کوشد اطلاعاتی کاربردی از قبیل ارزش های صادراتی
+          محصول ، زیرساخت های صادراتی ، نحوه تنظیم قرارداد و نحوه انتقال سفارشات را به تجار و شرکت های بین المللی ارائه
+          دهد تا در قدم نخست اخلاق حرفه ای در بحث فرایند صادرات را پوشش داده و در مرحله بعد با ارائه اطلاعات پایه ای به
+          تجار و کسب و کارهای جهانی نیاز به اطلاعات اولیه جهت مبادله را تأمین نمایند. </p>
       </div>
     </div>
   </div>
   <div class="artco-bio">
 
     <h1 class="title">آرتکو</h1>
-    <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-      است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-      کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت
-      فراوان جامعه و متخصصان را می طلبد.</p>
-    <p class="off">این یک متن نمونه است برای پر کردن این فضای خالی لعنتی این یک متن نمونه است برای پر کردن این فضای خالی
-      لعنتی این یک متن نمونه است برای پر کردن این فضای خالی لعنتی این یک متن نمونه است برای پر کردن این فضای خالی
-      لعنتی این یک متن نمونه است برای پر کردن این فضای خالی لعنتی </p>
-    <p class="off">چیزی که زیاده فضای خالی، چیزی که کمه نوشته ی نمونه برای پر کردنش. چیزی که زیاده فضای خالی، چیزی که
-      کمه نوشته ی نمونه برای پر کردنش. چیزی که زیاده فضای خالی، چیزی که کمه نوشته ی نمونه برای پر کردنش. چیزی که زیاده
-      فضای خالی، چیزی که کمه نوشته ی نمونه برای پر کردنش. </p>
-    <p class="off">اگه نپرسی دروغ نمی شنوی اگه نپرسی دروغ نمی شنوی اگه نپرسی دروغ نمی شنوی اگه نپرسی دروغ نمی شنوی اگه
-      نپرسی دروغ نمی شنوی اگه نپرسی دروغ نمی شنوی اگه نپرسی دروغ نمی شنوی اگه نپرسی دروغ نمی شنوی </p>
+    <p>شرکت آرتکو فعالیت خود را در سال ۲۰۱۲ با تمرکز بر خلق محصولاتی لوکس و دست‌ساز آغاز نمود ، در قدم نخست با شناسایی و
+      جذب برترین استادکاران صنعت فیروزه کوبی در ایران و همچنین آموزش بیش از ۳۰ نیروی مستعد اقدام به پوشش تقاضای بازار
+      کشور ایران نمود در سالهای ۲۰۱۵ _۲۰۱۲ شرکت آرتکو با گسترش کارگاه مرکزی خود به هشت کارگاه متمرکز در ایران با مجموع
+      ۱۳۰ استاد کار به یکی از قطب های تولید محصول در این حوزه تبدیل گشت و طبق چشم انداز صادراتی خویش علاوه بر تامین
+      تقاضای کشور ایران اقدام به پوشش نیاز بازارهای جهانی نمود.
+      در حال حاضر شرکت آرتکو با ظرفیت تولید ۱۴۰۰ قطعه محصول در ماه با بهره گیری از بهترین متخصصان حوزه بازارشناسی در بحث
+      طراحی زیر ساخت تولید محصولات برای بازارهای جهانی توانسته است تمام امور مربوط به تولید محصولات فیروزه کوبی تا
+      صادرات و انتقال ایمن سفارشات به بخش های آسیای غربی و شرق اروپا را در رزومه صادراتی خود ثبت نماید ، همچنین واحد
+      تولید بین الملل شرکت آرتکو با همکاری با برترین متخصصان حوزه برندینگ و مارکتینگ جریانی پویا از شناسایی فرهنگ و جنس
+      تقاضا در کشورهای هدف را پیش گرفته تا تمایزی کاربردی در نحوه تولید محصولات بخش بین الملل تا نحوه بسته بندی محصولات
+      را متناسب با هر کشور هدف و تجار آن کشور پوشش دهد . </p>
     <div class="topics">
       <ul>
         <li>رزومه</li>
+        <li>کیفیت ج.</li>
+        <li>گالری</li>
         <li>توضیحات</li>
-        <li>تجارت</li>
-        <li>کمک</li>
       </ul>
     </div>
     <span class="a-symbol">T</span>
   </div>
-  <div class="export-resume">
+  <div id="export-resume" class="export-resume">
     <div class="text-side">
       <h2 class="title">رزومه</h2>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
@@ -94,7 +97,7 @@
       <img src="img/plate.png" alt="">
     </div>
   </div>
-  <div class="export-resume reverse">
+  <div id="export-quality" class="export-resume reverse">
     <div class="text-side">
       <h2 class="title">کیفیت .جی</h2>
       <p>
@@ -108,13 +111,13 @@
       <img src="img/1.jpg" alt="">
     </div>
   </div>
-  <div class="export-gallery">
+  <div id="export-gallery" class="export-gallery">
     <img src="tile.png" alt="">
     <img src="img/1.jpg" alt="">
     <img src="img/neck.jpg" alt="">
     <img src="img/earing.jpg" alt="">
   </div>
-  <div class="export-description">
+  <div id="export-description" class="export-description">
     <div class="title">توضیحات</div>
     <h5>
       بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
