--- a/export.html
+++ b/export.html
@@ -34,11 +34,12 @@
   <div class="header">
     <div class="nav">
       <ul>
-        <li class="links">Home</li>
-        <li class="links">Galley</li>
-        <li class="links">Some</li>
-        <li class="links">Export</li>
-        <li class="links">About us</li>
+        <li class="links"><a href="#">Home</a></li>
+        <li class="links"><a href="#">Galley</a></li>
+        <li class="links"><a href="#">Collection</a></li>
+        <li class="links"><a href="#">Wholesale</a></li>
+        <li class="links"><a href="#">Export</a></li>
+        <li class="links"><a href="#">About us</a></li>
         <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
@@ -77,25 +78,17 @@
       identifying the culture and nature of demands in the target countries. In doing so, the company seeks to bring
       about a practical distinction in the production method of international products and their packaging, commensurate
       with each target country and its traders.</p>
-    <p class="off">In yek matne nemune baraye por kardane in fazaye khali estefade shode.fekr kardan be jomleyi bi
-      manast. In yek matne nemune baraye por
-      kardane in fazaye khali estefade shode, Tarraih ba css tafavoti ba tarahi ba ghalam nmikonad?</p>
-    <p class="off">Tarraih ba css tafavoti ba tarahi ba ghalam nmikonad? In yek matne nemune baraye por kardane in
-      fazaye khali estefade shode,yeki az sakht tarin karha dar tarahi fekr kardan be jomleyi bi manast.</p>
-    <p class="off">yeki az sakht tarin karha dar tarahi fekr kardan be jomleyi bi manast. In yek matne nemune baraye
-      por
-      kardane in fazaye khali estefade shode, Tarraih ba css tafavoti ba tarahi ba ghalam nmikonad?</p>
     <div class="topics">
       <ul>
         <li>Resume</li>
+        <li>Quality G.</li>
+        <li>Galley</li>
         <li>Description</li>
-        <li>Trade</li>
-        <li>Helper</li>
       </ul>
     </div>
     <span class="a-symbol">T</span>
   </div>
-  <div class="export-resume">
+  <div id="export-resume" class="export-resume">
     <div class="text-side">
       <h2 class="title">Resume</h2>
       <p>lorem ipsum In publishing and graphic design, Lorem ipsum is a placeholder text commonly
@@ -108,7 +101,7 @@
       <img src="img/plate.png" alt="">
     </div>
   </div>
-  <div class="export-resume reverse">
+  <div id="export-quality" class="export-resume reverse">
     <div class="text-side">
       <h2 class="title">Quality G.</h2>
       <p>lorem ipsum In publishing and graphic design, Lorem ipsum is a placeholder text commonly
@@ -124,13 +117,13 @@
       <img src="img/1.jpg" alt="">
     </div>
   </div>
-  <div class="export-gallery">
+  <div id="export-gallery" class="export-gallery">
     <img src="tile.png" alt="">
     <img src="img/1.jpg" alt="">
     <img src="img/neck.jpg" alt="">
     <img src="img/earing.jpg" alt="">
   </div>
-  <div class="export-description">
+  <div id="export-description" class="export-description">
     <div class="title">Description</div>
     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
       magna
