--- a/gallery-fa.html
+++ b/gallery-fa.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
   <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
         type="text/css"/>
-  <link rel="stylesheet" href="css/en/main.css">
+  <link rel="stylesheet" href="css/fa/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -37,12 +37,12 @@
     <div class="navbar">
       <div class="nav">
         <ul>
-          <li>Home</li>
-          <li>Galley</li>
-          <li>Collection</li>
-          <li>Export</li>
-          <li>Wholesale</li>
-          <li>About us</li>
+          <li><a href="#">خانه</a></li>
+          <li><a href="#">گالری</a></li>
+          <li><a href="#">مجموعه</a></li>
+          <li><a href="#">خرید</a></li>
+          <li><a href="#">صادرات</a></li>
+          <li><a href="#">درباره ما</a></li>
         </ul>
       </div>
     </div>
@@ -59,14 +59,13 @@
     <div class="gooddesign-slide">
       <div class="description">
         <div class="text-wrapper">
-          <h1>Good design matters</h1>
-          <h6>Good design matters and some text. Lorem ipsum as a test for this is just a text Good design matters and
-            some</h6>
-          <button class="learn-more longer">
+          <h1>طراحی خوب مهمه</h1>
+          <h6>طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با طراحی خوب</h6>
+          <button class="learn-more">
             <span class="circle" aria-hidden="true">
               <span class="icon arrow"></span>
             </span>
-            <span class="button-text">Product Page</span>
+            <span class="button-text">صفحه صادرات</span>
           </button>
         </div>
       </div>
@@ -75,15 +74,15 @@
       </div>
     </div>
     <div class="word-slider">
-      <h1>Word Sliders will implement here</h1>
-      <h4>Natural Inspiration for product design</h4>
+      <h1>اسلایدر کلمه اینجا پیاده سازی میشه</h1>
+      <h4>الهام از طبیعت برای طراحی محصولات</h4>
     </div>
     <div class="tiles-wrapper">
       <div class="tile top">
         <div class="xxx">
           <img src="img/neck.jpg" alt="">
           <div class="hover">
-            <h3>Natural Design</h3>
+            <h3>طراحی طبیعت</h3>
             <div class="button">
               <div class="left"></div>
               <div class="right"></div>
@@ -95,7 +94,7 @@
             <div class="x">
               <img src="img/flower.jpg" alt="">
               <div class="hover">
-                <h3>Natural Design</h3>
+                <h3>طراحی طبیعت</h3>
                 <div class="button">
                   <div class="left"></div>
                   <div class="right"></div>
@@ -105,7 +104,7 @@
             <div class="x">
               <img src="img/texture1.png" alt="">
               <div class="hover">
-                <h3>Natural Design</h3>
+                <h3>طراحی طبیعت</h3>
                 <div class="button">
                   <div class="left"></div>
                   <div class="right"></div>
@@ -116,7 +115,7 @@
           <div class="xx">
             <img src="img/texture2.png" alt="">
             <div class="hover">
-              <h3>Natural Design</h3>
+              <h3>طراحی طبیعت</h3>
               <div class="button">
                 <div class="left"></div>
                 <div class="right"></div>
@@ -176,17 +175,17 @@
       <div class="play">
         <div class="button">
           <img src="img/arrow-b.png" alt="">
-          <h2>Play</h2>
+          <h2>اجرا</h2>
         </div>
       </div>
     </div>
     <div class="gallery">
       <div class="description">
-        <h4>Even more material</h4>
+        <h4>محصولات بیشتر</h4>
         <div class="play">
           <div class="button">
             <img src="img/arrow.png" alt="">
-            <h2>Gallery</h2>
+            <h2>گالری</h2>
           </div>
         </div>
       </div>
@@ -201,20 +200,20 @@
           <div><img src="img/artcologo3.svg" alt=""></div>
         </div>
         <div class="site-map">
-          <span>Explore
+          <span>اکسپلور
             <span class="footer-slider-wrapper">
               <span class="footer-slider roll-it">
-                <span>Smart</span>
-                <span>Inspiring</span>
-                <span>Inovative</span>
-                <span>Technotile</span>
-                <span>magic</span>
-                <span>Interesting</span>
-                <span>Reliable</span>
-                <span>immortal</span>
-                <span>Divine</span>
-                <span>Lovely</span>
-                <span>Pixel</span>
+                <span>دقت</span>
+                <span>ظرافت</span>
+                <span>طراحی</span>
+                <span>این</span>
+                <span>چند</span>
+                <span>نمونه</span>
+                <span>کلمه</span>
+                <span>لورم</span>
+                <span>ایپسوم</span>
+                <span>است</span>
+                <span>آخری</span>
               </span>
             </span>
           </span>
@@ -225,28 +224,28 @@
                   <div class="item">
                     <div class="arrow"><img src="img/arrow-b.png" alt="read more">
                     </div>
-                    <a href="#">Home</a>
+                    <a href="#">خانه</a>
                   </div>
                 </li>
                 <li>
                   <div class="item">
                     <div class="arrow"><img src="img/arrow-b.png" alt="read more">
                     </div>
-                    <a href="#">Gallery</a>
+                    <a href="#">گالری</a>
                   </div>
                 </li>
                 <li>
                   <div class="item">
                     <div class="arrow"><img src="img/arrow-b.png" alt="read more">
                     </div>
-                    <a href="#">Export</a>
+                    <a href="#">صادرات</a>
                   </div>
                 </li>
                 <li>
                   <div class="item">
                     <div class="arrow"><img src="img/arrow-b.png" alt="read more">
                     </div>
-                    <a href="#">About Us</a>
+                    <a href="#">درباره ما</a>
                   </div>
                 </li>
               </ul>
@@ -257,14 +256,14 @@
                   <div class="item">
                     <div class="arrow"><img src="img/arrow-b.png" alt="read more">
                     </div>
-                    <a href="#">Collection</a>
+                    <a href="#">مجموعه</a>
                   </div>
                 </li>
                 <li>
                   <div class="item">
                     <div class="arrow"><img src="img/arrow-b.png" alt="read more">
                     </div>
-                    <a href="#">Wholesale</a>
+                    <a href="#">عمده فروشی</a>
                   </div>
                 </li>
               </ul>
@@ -272,20 +271,20 @@
           </div>
         </div>
         <div class="contact">
-          <h2>Contact Us</h2>
-          <div><h5>Mail:</h5></div>
+          <h2>ارتباط با ما</h2>
+          <div><h5>ایمیل :</h5></div>
           <div><h6>FirozeKoobi@gmail.com</h6></div>
           <div><h6>CustomerService@artco.com</h6></div>
-          <div><h5>Phone:</h5></div>
+          <div><h5>تلفن :</h5></div>
           <div><h6>+98 912 212 1773 (Sells department)</h6></div>
-          <div><h5>Address:</h5></div>
+          <div><h5>نشانی :</h5></div>
           <div><h6>Zanjan, Zanjan, Iran, Lorep ipsum</h6></div>
         </div>
         <div class="newsletter">
-          <h2>Newsletter</h2>
+          <h2>خبرنامه</h2>
           <label for="inp" class="inp">
             <input type="text" id="inp" placeholder="&nbsp;">
-            <span class="label">Enter your email</span>
+            <span class="label">ایمیل را وارد کنید</span>
             <span class="border"></span>
           </label>
           <button class="submit"></button>
@@ -304,7 +303,7 @@
           </a>
         </div>
       </div>
-      <div class="copyright"><h6>All right reserved for <b>ARTCO</b> company, 2019</h6></div>
+      <div class="copyright"><h6> تمامی حقوق برای شرکت <b>ARTCO</b> محفوظ است، 1398</h6></div>
     </div>
   </section>
 
