--- a/generalshop.html
+++ b/generalshop.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/en/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -31,11 +34,12 @@
   <div class="header">
     <div class="nav">
       <ul>
-        <li class="links">Home</li>
-        <li class="links">Galley</li>
-        <li class="links">Some</li>
-        <li class="links">Export</li>
-        <li class="links">About us</li>
+        <li class="links"><a href="#">Home</a></li>
+        <li class="links"><a href="#">Galley</a></li>
+        <li class="links"><a href="#">Collection</a></li>
+        <li class="links"><a href="#">Wholesale</a></li>
+        <li class="links"><a href="#">Export</a></li>
+        <li class="links"><a href="#">About us</a></li>
         <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
@@ -93,7 +97,7 @@
   <div class="footer">
     <div class="details">
       <div class="logo">
-        <div><img src="img/logo.png" alt=""></div>
+        <div><img src="img/artcologo3.svg" alt=""></div>
       </div>
       <div class="site-map">
           <span>Explore
