--- a/productDetails-fa.html
+++ b/productDetails-fa.html
@@ -44,59 +44,97 @@
       </ul>
     </div>
   </div>
-
-  <div class="portrait"><img src="img/ring2.jpg" alt="">
-    <h2>ما فکر می کنیم زیبایی ساده است</h2></div>
-  <div class="categories-noback">
-    <div class="title regular">دسته بندی ها</div>
-    <div class="cats-title">
-      <ul>
-        <li><a href="#">میوه خوری</a></li>
-        <li><a href="#">لوازم</a></li>
-        <li><a href="#">قندون</a></li>
-        <li><a href="#">گلها</a></li>
-      </ul>
+  <div class="product-preview">
+    <div class="product">
+      <img src="img/product.png" alt="Product">
     </div>
-    <div class="items-wrapper">
-      <div class="item" >
-        <img src="img/0.jpg" alt="">
-        <span>Moham. D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
-      </div>
-      <div class="item">
-        <img src="img/ring.jpg" alt="">
-        <span>Miveh G5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
-      </div>
-      <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
-      </div>
-      <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
-      </div>
-      <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
-      </div>
-      <div class="item">
-        <img src="img/ring.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+    <div class="details">
+      <h1 class="title">گلاب پاش</h1>
+      <div class="images">
+        <div class="image">
+          <img src="icon.png" alt="">
+        </div>
+        <div class="image">
+          <img src="icon.png" alt="">
+        </div>
+        <div class="image">
+          <img src="icon.png" alt="">
+        </div>
+        <div class="image">
+          <img src="icon.png" alt="">
+        </div>
       </div>
     </div>
   </div>
+  <div class="product-info">
+    <div class="product-description">
+      <h3 class="title">توضیحات</h3>
+      <span class="info">یسری توضیح فقط برای پر گردن این بخش مثل لورم ایپسوم و متن های دیگر یسری توضیح فقط برای پر گردن این بخش مثل لورم ایپسوم و متن های دیگر </span>
+      <div class="offer">#Set offer here</div>
+    </div>
+    <div class="choose-model">
+      <h3 class="title">انتخاب مدل</h3>
+      <div class="models">
+        <a href="#" class="model selected">LX1</a>
+        <a href="#" class="model">GL1</a>
+        <a href="#" class="model">SL2</a>
+        <a href="#" class="model">VS1</a>
+      </div>
+      <div class="properties">
+        <span class="property"><b>وزن: </b>1.4 KG</span>
+        <span class="property"><b>ارتفاع: </b>60 CM</span>
+      </div>
+      <div class="properties">
+        <span class="property"><b>مس: </b>100 G</span>
+        <span class="property"><b>فیروزه: </b>100 G</span>
+      </div>
+      <div class="choose-packing">
+        <h3 class="title">انتخاب بسته بندی:</h3>
+        <div class="models">
+          <a href="#" class="model selected">Metal Box
+            <h4>+20 یورو</h4>
+          </a>
+          <br>
+          <a href="#" class="model">VS1</a>
 
-  <div class="portrait2"><img src="img/earing.jpg" alt="">
-    <h2>لورم ایپسوم</h2></div>
+        </div>
+      </div>
+      <div class="price">
+        <div class="text">
+          <h3>قیمت <span>3,700 یورو</span></h3>
+          <h5>به اضافه ی 10 یورو برای هرچی</h5>
+        </div>
+        <div class="icon">
+          <img src="img/shopping-cart.svg" alt="Buy">
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="similar-product">
+<div class="title">محصولات مشابه</div>
+<div class="items">
+  <div class="item">
+    <img src="img/pot.png" alt="">
+    <span>Moham. D5-D6</span>
+    <div class="seemore">مشاهده بیشتر</div>
+  </div>
+  <div class="item">
+    <img src="img/pot.png" alt="">
+    <span>Moham. D5-D6</span>
+    <div class="seemore">مشاهده بیشتر</div>
+  </div>
+  <div class="item">
+    <img src="img/pot.png" alt="">
+    <span>Moham. D5-D6</span>
+    <div class="seemore">مشاهده بیشتر</div>
+  </div>
+</div>
+</div>
+
   <div class="footer">
     <div class="details">
       <div class="logo">
-        <div><img src="img/artcologo3.svg" alt=""></div>
+        <div><img src="img/logo.png" alt=""></div>
       </div>
       <div class="site-map">
           <span>اکسپلور
