--- a/productDetails.html
+++ b/productDetails.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/en/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -27,123 +30,130 @@
 
 <!-- Add your site or application content here -->
 <div class="container">
-  <span class="fsymbol smaller opac">TY</span>
-  <div class="header transparent">
-    <div class="lang"><span>English</span>
-      <img src="img/translate.svg" alt="Language"/>
-    </div>
+  <span class="fsymbol">T</span>
+  <div class="header">
     <div class="nav">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Galley</a></li>
-        <li><a href="#">Collection</a></li>
-        <li><a href="#">Wholesale</a></li>
-        <li><a href="#">Export</a></li>
-        <li><a href="#">About us</a></li>
+        <li class="links"><a href="#">Home</a></li>
+        <li class="links"><a href="#">Galley</a></li>
+        <li class="links"><a href="#">Collection</a></li>
+        <li class="links"><a href="#">Wholesale</a></li>
+        <li class="links"><a href="#">Export</a></li>
+        <li class="links"><a href="#">About us</a></li>
+        <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
   </div>
+  <div class="product-preview">
+    <div class="product">
+      <img src="img/product.png" alt="Product">
+    </div>
+    <div class="details">
+      <h1 class="title">Golab pash</h1>
+      <div class="images">
+        <div class="image">
+          <img src="img/product.png" alt="Golab pash">
+        </div>
+        <div class="image">
+          <img src="img/pot.png" alt="koozeh">
+        </div>
+        <div class="image">
+          <img src="img/plate.png" alt="boshghab">
+        </div>
+        <div class="image">
+          <img src="img/tree.png" alt="derakht">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="product-info">
+    <div class="product-description">
+      <h3 class="title">Description</h3>
+      <span class="info">Lorem ipsum somthing about product and how here lorem Lorem ipsum somthing about product and how here lorem Lorem ipsum somthing about product and how here lorem </span>
+      <div class="offer">#Set offer here</div>
+    </div>
+    <div class="choose-model">
+      <h3 class="title">Choose model</h3>
+      <div class="models">
+        <a href="#" class="model selected">LX1</a>
+        <a href="#" class="model">GL1</a>
+        <a href="#" class="model">SL2</a>
+        <a href="#" class="model">VS1</a>
+      </div>
+      <div class="properties">
+        <span class="property"><b>Weight: </b>1.4 KG</span>
+        <span class="property"><b>Height: </b>60 CM</span>
+      </div>
+      <div class="properties">
+        <span class="property"><b>Copper: </b>100 G</span>
+        <span class="property"><b>Firozeh: </b>100 G</span>
+      </div>
+      <div class="choose-packing">
+        <h3 class="title">Choose packing:</h3>
+        <div class="models">
+          <a href="#" class="model selected">Metal Box
+            <h4>+20 Euro</h4>
+          </a>
+          <br>
+          <a href="#" class="model">VS1</a>
 
-  <div class="half-slider">
-    <div class="hstext-wrapper">
-      <h1>High Quality<br>Our Priority</h1>
-      <h6>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this
-        area</h6>
-    </div>
-    <div class="hs-wrapper">
-      <div class="indicator">
-        <div class="sl"></div>
-        <div class="nsl"></div>
-        <div class="sl"></div>
-        <div class="sl"></div>
+        </div>
+      </div>
+      <div class="price">
+        <div class="text">
+          <h3>Price <span>3,700 Euro</span></h3>
+          <h5>Plus 10 Euros for shipping</h5>
+        </div>
+        <div class="icon">
+          <img src="img/shopping-cart.svg" alt="Buy">
+        </div>
       </div>
     </div>
   </div>
-  <div class="categories marginbackground">
-    <div class="title nonitalic">Creation</div>
-    <h5>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this
-      area, Iranian lorem ,artifact and lorem ipsum of something, this text is just a sample to fill this
-      area, Iranian lorem history, Iranian lorem ,artifact and lorem ipsum of something, this text is just a sample to
-      fill this area, Iranian lorem history , artifact and lorem ipsum of something, this text is just a sample to fill
-      this
-      area</h5>
+<div class="similar-product">
+<div class="title">Similar production</div>
+<div class="items">
+  <div class="item">
+    <img src="img/pot.png" alt="">
+    <span>Moham. D5-D6</span>
+    <div class="seemore">See more</div>
   </div>
+  <div class="item">
+    <img src="img/pot.png" alt="">
+    <span>Moham. D5-D6</span>
+    <div class="seemore">See more</div>
+  </div>
+  <div class="item">
+    <img src="img/pot.png" alt="">
+    <span>Moham. D5-D6</span>
+    <div class="seemore">See more</div>
+  </div>
+</div>
+</div>
 
-
-  <div class="photo-gallery">
-    <div class="fluid"><img src="img/photo%20galley%20(1).jpg" alt=""></div>
-    <div class="thumbnail">
-      <div class="item">
-        <img src="img/photo%20galley%20(14).jpg" alt="">
-      </div>
-      <div class="item">
-        <img src="img/photo%20galley%20(13).jpg" alt="">
-      </div>
-      <div class="item">
-        <img src="img/photo%20galley%20(12).jpg" alt="">
-      </div>
-      <div class="item">
-        <img src="img/photo%20galley%20(11).jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <div class="sponsorship">
-    <div class="title">Sponsorship</div>
-    <div class="row">
-      <div class="text-wrapper">
-        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</h5>
-      </div>
-      <div class="image-wrapper">
-        <img src="img/photo%20galley%20(10).jpg" alt="">
-      </div>
-    </div>
-    <div class="row">
-      <div class="text-wrapper">
-        <h5>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur.
-          <br/><br/>
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-          id est laborum</h5>
-      </div>
-      <div class="image-wrapper">
-        <img src="img/photo%20galley%20(9).jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <div class="description">
-    <div class="title">Description</div>
-    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-      sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h5>
-  </div>
-  <div class="info">
-    <div class="text-wrapper">
-      <div class="title">Info</div>
-      <div class="details">
-        <h5>Mail:</h5>
-        <h6>CustomerService@artco.com</h6>
-        <h5>Phone:</h5>
-        <h6>+98 912 212 1773</h6>
-        <h6>For more information see more materials</h6>
-      </div>
-    </div>
-
-    <div class="map-wrapper"></div>
-  </div>
   <div class="footer">
     <div class="details">
       <div class="logo">
         <div><img src="img/logo.png" alt=""></div>
       </div>
       <div class="site-map">
-        <span>Explore</span>
+          <span>Explore
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>Smart</span>
+                <span>Inspiring</span>
+                <span>Inovative</span>
+                <span>Technotile</span>
+                <span>magic</span>
+                <span>Interesting</span>
+                <span>Reliable</span>
+                <span>immortal</span>
+                <span>Divine</span>
+                <span>Lovely</span>
+                <span>Pixel</span>
+              </span>
+            </span>
+          </span>
         <div class="wrapper">
           <div class="left">
             <ul>
@@ -214,7 +224,7 @@
           <span class="label">Enter your email</span>
           <span class="border"></span>
         </label>
-        <button type="submit">Submit</button>
+        <button class="submit"></button>
       </div>
     </div>
     <div class="social">
@@ -234,10 +244,8 @@
   </div>
 </div>
 
-
 <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="js/vendor/jquery-3.4.1.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
